# HecateVPN

./: Cargo.toml  README.md
assets/: icon.rgba
mini-lan-bridge/: Cargo.toml  README.md
mini-lan-bridge/src/: config.rs  main.rs  network.rs
src/: app.rs  main.rs  packet.rs
src/network/: node.rs
src/ui/: egui_ui.rs
