[package]
name = "HecateVPN"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
anyhow = "1.0"
local-ip-address = "0.5"     # for IP automatic detection
eframe = "0.26"              # egui framework for multiplatform GUI 
egui = "0.26"
